--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,31 @@
 <resources>
-    <string name="app_name">BigBoyz_Final_Project</string>
+    <string name="app_name">BigBrainz</string>
+
+    <!-- Bottom Navigation Menu -->
     <string name="title_home">Home</string>
-    <string name="title_dashboard">Dashboard</string>
-    <string name="title_notifications">Notifications</string>
+    <string name="title_quizzes">Quizzes</string>
+    <string name="title_profile">Profile</string>
+
+    <!-- Login -->
+    <string name="login_header">Login to your account</string>
+    <string name="hint_email">Email</string>
+    <string name="hint_password">Password</string>
+    <string name="btn_login">LOGIN</string>
+    <string name="btn_to_signup">CREATE AN ACCOUNT</string>
+
+    <!-- Signup -->
+    <string name="signup_header">Create an account</string>
+    <string name="hint_username">Username</string>
+    <string name="hint_confirm_password">Confirm Password</string>
+    <string name="btn_signup">SIGN UP</string>
+    <string name="btn_to_login">I ALREADY HAVE AN ACCOUNT</string>
+
+    <!-- Profile -->
+    <string name="profile_header">Profile</string>
+    <string name="profile_username">Username</string>
+    <string name="profile_email">Email</string>
+    <string name="profile_password">Password</string>
+    <string name="btn_update">UPDATE</string>
+    <string name="btn_logout">LOGOUT</string>
+
 </resources>
