--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,11 @@
 <resources>
     <string name="app_name">BigBrainz</string>
+    <string name="btn_cancel">CANCEL</string>
 
     <!-- Bottom Navigation Menu -->
+    <string name="title_dashboard">Dashboard</string>
+    <string name="title_notifications">Notifications</string>
+
     <string name="title_home">Home</string>
     <string name="title_quizzes">Quizzes</string>
     <string name="title_profile">Profile</string>
@@ -20,12 +24,27 @@
     <string name="btn_signup">SIGN UP</string>
     <string name="btn_to_login">I ALREADY HAVE AN ACCOUNT</string>
 
+    <!-- Dashboard -->
+    <string name="dashboard_greetings">Ready to test your whiz?</string>
+    <string name="dashboard_create_take_quiz">Create/Take a Quiz</string>
+    <string name="title_schedule">Your Scheduled Quizzes</string>
+    <string name="btn_create_quiz">CREATE QUIZ</string>
+    <string name="btn_take_quiz">TAKE QUIZ</string>
+
     <!-- Profile -->
     <string name="profile_header">Profile</string>
     <string name="profile_username">Username</string>
     <string name="profile_email">Email</string>
     <string name="profile_password">Password</string>
-    <string name="btn_update">UPDATE</string>
+    <string name="btn_edit_profile">EDIT PROFILE</string>
     <string name="btn_logout">LOGOUT</string>
+
+    <!-- Edit Profile -->
+    <string name="edit_profile_header">EDIT PROFILE</string>
+    <string name="hint_edit_username">Enter New Username</string>
+    <string name="hint_edit_email">Enter New Email</string>
+    <string name="hint_edit_password">Enter New Password</string>
+    <string name="hint_edit_confirm_password">Confirm New Password</string>
+    <string name="btn_update">SAVE CHANGES</string>
 
 </resources>
