--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,6 +5,8 @@
     <string name="title_home">Home</string>
     <string name="title_quizzes">Quizzes</string>
     <string name="title_profile">Profile</string>
+    <string name="title_dashboard">Dashboard</string>
+    <string name="title_notifications">Notifications</string>
 
     <!-- Login -->
     <string name="login_header">Login to your account</string>
@@ -27,5 +29,7 @@
     <string name="profile_password">Password</string>
     <string name="btn_update">UPDATE</string>
     <string name="btn_logout">LOGOUT</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 
 </resources>
